force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Those who are active will have Apex sharing for all Project Proposal and related records</description>
    <inlineHelpText>When ticked the individual named on this record can view this project and related items if they are a PRIME user.</inlineHelpText>
    <label>Visibility of Project</label>
    <type>Checkbox</type>
</CustomField>