force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Contact_is_PRIME_Researcher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_is_PRIME_Researcher__c</fullName>
    <description>Whether or not the Project Team Member field (Contact lookup) is referring to a PRIME Researcher. This is used in sharing calculations and email templates</description>
    <formula>I_RS_Project_Team_Member__r.I_RS_Related_User__r.I_RS_Is_Researcher_User__c = &quot;1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact is PRIME Researcher</label>
    <type>Checkbox</type>
</CustomField>