force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Current_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Current_User__c</fullName>
    <formula>IF($User.Id = I_RS_Project_Team_Member__r.I_RS_Related_User__r.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User</label>
    <type>Checkbox</type>
</CustomField>