force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Added__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when the project member was included to the project team</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>