force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Date_Agreed_by_Researcher__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Agreed_by_Researcher__c</fullName>
    <description>Date when the Researcher approved the involvement of the team member for the project</description>
    <label>Date Agreed by Researcher</label>
    <type>Date</type>
</CustomField>