force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Removed__c</fullName>
    <description>Date when the project member moved out of the project team</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>