force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funder_Name__c</fullName>
    <description>Proposal&apos;s Funder Name</description>
    <formula>IF( NOT(ISBLANK( I_RS_Project_Proposal__r.I_RS_Account_Organisation__c )) ,  I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name  , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Name</label>
    <type>Text</type>
</CustomField>