force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opportunity__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Funding_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Opportunity</label>
    <type>Text</type>
</CustomField>