force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Is_currently_in_progress__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_currently_in_progress__c</fullName>
    <description>Used to determine whether &apos;Current Team Member&apos; should be enabled, which in turn is a legacy checkbox that drives other functionality such as record sharing, and email notifications</description>
    <formula>/*Start date is not in the future - it is now or in the past*/
TODAY() &gt;= I_RS_Date_Added__c &amp;&amp;

/*End date is empty, or in the future*/
(TODAY() &lt;= I_RS_Date_Removed__c || ISBLANK(I_RS_Date_Removed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is currently in progress</label>
    <type>Checkbox</type>
</CustomField>