force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Is_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_Proposal__c</fullName>
    <formula>IF (I_RS_Project_Proposal__r.I_RS_Record_Type_Developer_Name__c &lt;&gt; &apos;I_RS_Project&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Proposal?</label>
    <type>Checkbox</type>
</CustomField>