force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Lead_Chief_Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_Name__c</fullName>
    <description>Contains the Name (First Name &lt;space&gt; Last Name from Contact) of Lead chief investigator</description>
    <formula>I_RS_Project_Proposal__r.I_RS_Lead_Chief_Investigator__r.FirstName &amp; &quot; &quot; &amp;  I_RS_Project_Proposal__r.I_RS_Lead_Chief_Investigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Chief Investigator Name</label>
    <type>Text</type>
</CustomField>