force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <formula>IF( NOT(ISBLANK(I_RS_Project_Team_Member__c)) , I_RS_Project_Team_Member__r.Account.Name ,  I_RS_Project_Team_Member__r.Account.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Organisation</label>
    <type>Text</type>
</CustomField>