force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Part_Of_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Part_Of_La_Trobe__c</fullName>
    <description>Used to determine &apos;internal&apos; (i.e. La Trobe) Team members from &apos;external&apos;, such as when creating Line Items within a Project&apos;s Budget</description>
    <formula>I_RS_Project_Team_Member__r.Account.I_RS_Part_of_La_Trobe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Of La Trobe</label>
    <type>Checkbox</type>
</CustomField>