force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Percentage__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Percentage__c</fullName>
    <description>The amount of the project that is classified with the classification code</description>
    <label>Project FTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>