force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Person_Name__c</fullName>
    <description>Text version of Team Member name. Is updated in ProjectTeamMemberTriggerHelper apex class. Used to make Project Team Members globally searchable by the individual&apos;s name.</description>
    <label>Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>