force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_PP_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_PP_Status__c</fullName>
    <formula>TEXT(I_RS_Project_Proposal__r.I_RS_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>