force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <description>Related to project proposal</description>
    <label>Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Project Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>