force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Project_Proposal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal_Record_Id__c</fullName>
    <description>Stores text version of Project Proposal&apos;s record Id. Currently used in Project+Contact duplicate handling, as Duplicate Rule can only utilise one lookup field.</description>
    <label>Project Proposal Record Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>