force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Type__c</fullName>
    <formula>TEXT(I_RS_Project_Proposal__r.I_RS_Project_Sub_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Type</label>
    <type>Text</type>
</CustomField>