force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Reason_For_Not_Progressing__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Reason_For_Not_Progressing__c</fullName>
    <formula>TEXT (I_RS_Project_Proposal__r.I_RS_Reason_For_Not_Progressing__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason For Not Progressing</label>
    <type>Text</type>
</CustomField>