force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Related_User_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_User_Id__c</fullName>
    <description>Formula that captures the Related User on this record&apos;s Project Team Member (Contact) lookup. Used in sharing calculations</description>
    <formula>I_RS_Project_Team_Member__r.I_RS_Related_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related User Id</label>
    <type>Text</type>
</CustomField>