force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Research_Centre_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Centre_Id__c</fullName>
    <description>This field will hold the &quot;Account Id&quot; of the Research Centre to which the  &quot;Research Center Member&quot; belongs to.</description>
    <label>Research Centre Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>