force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Role__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Team_Member_Role</valueSetName>
    </valueSet>
</CustomField>