force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_School__c</fullName>
    <formula>I_RS_Project_Team_Member__r.I_RS_School__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current School</label>
    <type>Text</type>
</CustomField>