force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Team_Member_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Team_Member_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Researcher</description>
    <label>External Team Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Members (External)</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>