force-app/main/default/objects/Project_Team_Member__c/fields/I_RS_Team_Member_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Team_Member_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>La Trobe Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Team Members (LaTrobe)</relationshipLabel>
    <relationshipName>Project_Team_Members_Users</relationshipName>
    <type>Lookup</type>
</CustomField>