force-app/main/default/objects/Project_Team_Member__c/fields/L_BAU_Link_to_Project_Team_Member_Record__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Link_to_Project_Team_Member_Record__c</fullName>
    <formula>$Setup.L_BAU_Project_Team_Member_Url__c.L_BAU_Front_Url__c  +  Id  +  $Setup.L_BAU_Project_Team_Member_Url__c.L_BAU_Back_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Project Team Member Record</label>
    <type>Text</type>
</CustomField>