force-app/main/default/objects/Project_Team_Member__c/fields/L_BAU_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Project_Start_Date__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>