force-app/main/default/objects/Project_Team_Member__c/fields/L_BAU_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Project_Status__c</fullName>
    <formula>TEXT( I_RS_Project_Proposal__r.I_RS_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>