force-app/main/default/objects/Project_Team_Member__c/fields/L_BAU_Proposal_type__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Proposal_type__c</fullName>
    <formula>TEXT(I_RS_Project_Proposal__r.I_RS_Project_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal type</label>
    <type>Text</type>
</CustomField>