force-app/main/default/objects/Project_Team_Member__c/fields/L_BAU_Research_office_contact__c.field-meta.xml
<CustomField>
    <fullName>L_BAU_Research_office_contact__c</fullName>
    <formula>I_RS_Project_Proposal__r.I_RS_Research_Office_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research office contact</label>
    <type>Text</type>
</CustomField>