force-app/main/default/objects/Project_Team_Member__c/fields/Toggle__c.field-meta.xml
<CustomField>
    <fullName>Toggle__c</fullName>
    <formula>I_RS_Project_Proposal__r.Toggle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Toggle</label>
    <type>Checkbox</type>
</CustomField>