force-app/main/default/objects/Project_Team_Member__c/validationRules/Cannot_Change_Team_Member_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Team_Member_User</fullName>
    <active>true</active>
    <description>You cannot change the assigned User of a Team Member as the custom record sharing code does not support this</description>
    <errorConditionFormula>ISCHANGED(   I_RS_Project_Team_Member__c )</errorConditionFormula>
    <errorDisplayField>I_RS_Project_Team_Member__c</errorDisplayField>
    <errorMessage>You cannot change the Project Team Member. Please mark this record as inactive and create a new one.</errorMessage>
</ValidationRule>