force-app/main/default/objects/Project_Team_Member__c/validationRules/Cannot_create_modify_when_it_is_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_modify_when_it_is_project</fullName>
    <active>false</active>
    <description>Community users should not be able to create or modify a PTM record if the related Project Proposal record type is of type &quot;Project&quot;</description>
    <errorConditionFormula>AND(
( I_RS_Project_Proposal__r.I_RS_Record_Type_Developer_Name__c = &apos;I_RS_Project&apos;),
($User.I_RS_Is_Researcher_User__c  = &apos;1&apos; )
)&amp;&amp; ISCHANGED(Toggle__c)</errorConditionFormula>
    <errorMessage>Contact Research Office to adjust Project Team Members</errorMessage>
</ValidationRule>