force-app/main/default/objects/Project_Team_Member__c/validationRules/Restrict_Approver_Team_Members.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Approver_Team_Members</fullName>
    <active>true</active>
    <description>If creating a Project Team Member with the role of &apos;Approver&apos;, they must match either the First Approver or Second Approver on the Project Proposal. This is typically handled via automation, so this rule is mostly to block manual entries.</description>
    <errorConditionFormula>TEXT(I_RS_Role__c) == &apos;Approver&apos; &amp;&amp;
I_RS_Project_Team_Member__c &lt;&gt; I_RS_Project_Proposal__r.I_RS_First_Approver_Contact_Id__c &amp;&amp;
I_RS_Project_Team_Member__c &lt;&gt; I_RS_Project_Proposal__r.I_RS_Second_Approver_Contact_Id__c</errorConditionFormula>
    <errorDisplayField>I_RS_Role__c</errorDisplayField>
    <errorMessage>If creating a Project Team Member with the role of &apos;Approver&apos;, they must match either the First Approver or Second Approver on the Project/Project Proposal.</errorMessage>
</ValidationRule>