force-app/main/default/objects/Project_Team_Member__c/validationRules/Start_Date_cannot_be_after_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_cannot_be_after_end_date</fullName>
    <active>true</active>
    <description>The Start Date must be before the End Date</description>
    <errorConditionFormula>I_RS_Date_Added__c &gt; I_RS_Date_Removed__c</errorConditionFormula>
    <errorDisplayField>I_RS_Date_Added__c</errorDisplayField>
    <errorMessage>Start Date cannot be after End Date</errorMessage>
</ValidationRule>