force-app/main/default/objects/Project_Team_Member__c/listViews/All_Project_Team_Members.listView-meta.xml
<ListView>
    <fullName>All_Project_Team_Members</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Team_Member_User__c</columns>
    <columns>I_RS_Team_Member_Contact__c</columns>
    <columns>I_RS_Role__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Project Team Members</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Vice_Chancellor</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>