force-app/main/default/objects/Project_Team_Member__c/listViews/Andrew_Hill.listView-meta.xml
<ListView>
    <fullName>Andrew_Hill</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Project_Proposal__c</columns>
    <columns>I_RS_Team_Member_User__c</columns>
    <columns>I_RS_Team_Member_Contact__c</columns>
    <columns>I_RS_Role__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Team_Member_User__c</field>
        <operation>contains</operation>
        <value>Alahakoon</value>
    </filters>
    <label>Find Researcher</label>
</ListView>