force-app/main/default/objects/Project_Team_Member__c/listViews/My_Active_Projects.listView-meta.xml
<ListView>
    <fullName>My_Active_Projects</fullName>
    <booleanFilter>1 AND 2 AND 3 AND ( 4 OR ( 5 AND 6 ) )</booleanFilter>
    <columns>I_RS_Project_Proposal__c</columns>
    <columns>I_RS_Funding_Opportunity__c</columns>
    <columns>I_RS_Lead_Chief_Investigator_Name__c</columns>
    <columns>I_RS_Funder_Name__c</columns>
    <columns>I_RS_Project_Type__c</columns>
    <columns>I_RS_PP_Status__c</columns>
    <columns>I_RS_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>I_RS_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>I_RS_Role__c</field>
        <operation>notEqual</operation>
        <value>Approver,Research Centre Member</value>
    </filters>
    <filters>
        <field>I_RS_Is_Proposal__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>I_RS_PP_Status__c</field>
        <operation>notEqual</operation>
        <value>Project Closed</value>
    </filters>
    <filters>
        <field>I_RS_PP_Status__c</field>
        <operation>equals</operation>
        <value>Project Closed</value>
    </filters>
    <filters>
        <field>I_RS_Closure_Reason__c</field>
        <operation>equals</operation>
        <value>Changes Requested by Client/Funding body</value>
    </filters>
    <label>My Active Projects</label>
</ListView>